fix broken css

--- a/css/styles.css
+++ b/css/styles.css
@@ -114,8 +114,8 @@ a:active {
 
 /* FEATURES SECTION */
 .main {
-  background-color: rgb(20, 20, 20);
-  padding: 80px 32px;
+  /* background-color: rgb(20, 20, 20); */
+  padding: 0 32px 80px;
 }
 
 .features {
@@ -209,7 +209,7 @@ a:active {
   }
 
   .main {
-    padding: 64px 24px;
+    padding: 0 24px 80px;
   }
 
   .features {
